Updated with vertical nav bar, included logo for directory page, updated index.css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
 	<title>Company Directory</title>
 </head>
 <body>
-	<nav>
-  		<a href="/html/">Johnny Football</a> |
-  		<a href="/css/">Davey Chase</a> |
-  		<a href="/js/">Cathy Wicket</a>
+	<div>
+		<img src="Images/directory logo.gif" alt="Directory logo"/>
+	</div>
+	<nav class="vertical">
+    <ul>
+      <li>
+        <a href="#">Johnny Football</a>
+	  </li>
+	   <li>
+        <a href="#">Davey Chase</a>
+	  </li>
+	   <li>
+        <a href="#">Cathy Wicket</a>
+	  </li>
+	</ul>
 	</nav>
+
 </body>
 </html>
