--- a/employees/cathy-wicket.html
+++ b/employees/cathy-wicket.html
@@ -15,7 +15,7 @@
 
             <div class="media">
                 <div class="media-left">
-                    <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="https://randomuser.me/api/portraits/lego/1.jpg"/>
+                    <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
                 </div>
                 <div class="media-body">
                     <!-- Employee Position -->
