--- a/employees/davey-chase.html
+++ b/employees/davey-chase.html
@@ -11,11 +11,11 @@
             <!-- Back to index.html -->
             <a href="../index.html" class="btn btn-info">back</a>
             <!-- Employee Name -->
-            <h2>Davey Chase2>
+            <h2>Davey Chase</h2>
 
             <div class="media">
                 <div class="media-left">
-                    <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="https://randomuser.me/api/portraits/lego/1.jpg"/>
+                    <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="http://brickbust.thelegomovie.com/img/welcome/cityLego.png"/>
                 </div>
                 <div class="media-body">
                     <!-- Employee Position -->
