Added css links

--- a/employees/cathy-wicket.html
+++ b/employees/cathy-wicket.html
@@ -4,6 +4,7 @@
     <head>
         <!-- Load Bootstrap -->
         <link rel="stylesheet" tehref="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="">
     </head>
 
     <body>
