--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="CSS/index.css">
 	<title>Company Directory</title>
 </head>
 <body>
-	<div>
+	<div class="container">
 		<img src="Images/directory logo.gif" alt="Directory logo"/>
-	</div>
 	<nav class="vertical">
     <ul>
       <li>
@@ -21,6 +21,7 @@
 	  </li>
 	</ul>
 	</nav>
+	</div>
 
 </body>
 </html>
