Updated background image link, updated img styles on css stylesheet

--- a/employees/davey-chase.html
+++ b/employees/davey-chase.html
@@ -4,7 +4,7 @@
     <head>
         <!-- Load Bootstrap -->
         <link rel="stylesheet" tehref="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="">
+        <link rel="stylesheet" type="text/css" href="../CSS/employees.css">
     </head>
 
     <body>
@@ -16,7 +16,7 @@
 
             <div class="media">
                 <div class="media-left">
-                    <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="http://brickbust.thelegomovie.com/img/welcome/cityLego.png"/>
+                    <img class="img-circle" src="http://brickbust.thelegomovie.com/img/welcome/cityLego.png"/>
                 </div>
                 <div class="media-body">
                     <!-- Employee Position -->
