--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -16,7 +16,7 @@
 
             <div class="media">
                 <div class="media-left">
-                    <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;border-radius:50%" src="../Images/Johnny_Football.jpg"/>
+                    <img class="img-circle" src="../Images/Johnny_Football.jpg"/>
                 </div>
                 <div class="media-body">
                     <!-- Employee Position -->
