--- a/employees/davey-chase.html
+++ b/employees/davey-chase.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <!-- Load Bootstrap -->
-        <link rel="stylesheet" tehref="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../CSS/employees.css">
     </head>
 
