Added mailto functionality

--- a/employees/cathy-wicket.html
+++ b/employees/cathy-wicket.html
@@ -28,9 +28,9 @@
                             28
                         </p>
                         <h5>Email</h5>
-                        <p>
-                            cwicket@branstation.io
-                        </p>
+                        <address>
+                            <a href="mailto:cwicket@branstation.io">Cathy Wicket</a>
+                        </address>
                         <h5>Bio</h5>
                         <p>
                             Former professional cricketer, winner of Australian Sales Association award. I created Lady Gaga's name.
