--- a/employees/davey-chase.html
+++ b/employees/davey-chase.html
@@ -28,9 +28,9 @@
                             24
                         </p>
                         <h5>Email</h5>
-                        <p>
-                            d.chase@branstation.io
-                        </p>
+                        <address>
+                            <a href="mailto:d.chase@branstation.io">Davey Chase</a>
+                        </address>
                         <h5>Bio</h5>
                         <p>
                             Professional wrestler, Particle Physicist, Company Enforcer. I live on whey powder.
