--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -28,9 +28,9 @@
                             32
                         </p>
                         <h5>Email</h5>
-                        <p>
-                            jfootball@branstation.io
-                        </p>
+                        <address>
+                            <a href="mailto:jfootball@branstation.io">Johnny Football</a>
+                        </address>
                         <h5>Bio</h5>
                         <p>
                             Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
