--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
 	<title>Company Directory</title>
 </head>
 <body>
+	
+
 	<div class="container">
 		<img src="Images/directory logo.gif" alt="Directory logo"/>
 	<nav class="vertical">
+
+	<div class="thumbnail">
+
+	<img class="img-circle" src="Images/Johnny_Football.jpg"/>
+	
+	<img class="img-circle" src="http://brickbust.thelegomovie.com/img/welcome/cityLego.png"/>
+
+	<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
+
     <ul>
       <li>
         <a href="employees/johnny_football.html">Johnny Football</a>
