--- a/employees/davey-chase.html
+++ b/employees/davey-chase.html
@@ -35,6 +35,9 @@
                         <p>
                             Professional wrestler, Particle Physicist, Company Enforcer. I live on whey powder.
                         </p>
+                        <p> Favourite website: http://ca.bodybuilding.com/store/campaign/campaign.jsp?cId=canada-top-bodybuilding-supplements&mcid=GGL_CA_Bodybuilding_Brand-Bodybuilding_Brand_Semi_Branded_Bodybuilding&bbkwid=12616671&gclid=CKve8bKhkMgCFVY0aQod_XAFig
+
+                        Call it Bodybuilding Supplies
                     </div>
                 </div>
             </div>
