--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -35,6 +35,10 @@
                         <p>
                             Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
                         </p>
+                        <p>
+                        Website: http://www.wikihow.com/Be-a-Good-Boss
+                        Call it: Being A Boss
+                        </p>
                     </div>
                 </div>
             </div>
