Updated more favourite websites

--- a/employees/cathy-wicket.html
+++ b/employees/cathy-wicket.html
@@ -35,10 +35,8 @@
                         <p>
                             Former professional cricketer, winner of Australian Sales Association award. I created Lady Gaga's name.
                         </p>
-                        <p>
-                        Website: http://www.zinzin.com/welcome-naming-a-company-or-product/?gclid=CL2our6ikMgCFQMJaQodqLgCDg
-                        CAll it: Corporate Naming Practices
-                         </p>
+                        <h5>Favourite website</h5>
+                        <a href="http://www.zinzin.com/welcome-naming-a-company-or-product/?gclid=CL2our6ikMgCFQMJaQodqLgCDg">Corporate Naming Practices</a>
                     </div>
                 </div>
             </div>
