--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -35,10 +35,8 @@
                         <p>
                             Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
                         </p>
-                        <p>
-                        Website: http://www.wikihow.com/Be-a-Good-Boss
-                        Call it: Being A Boss
-                        </p>
+                        <h5>Favourite website</h5>
+                        <a href="http://www.wikihow.com/Be-a-Good-Boss">Being A Boss</a>
                     </div>
                 </div>
             </div>
