--- a/employees/cathy-wicket.html
+++ b/employees/cathy-wicket.html
@@ -36,7 +36,7 @@
                             Former professional cricketer, winner of Australian Sales Association award. I created Lady Gaga's name.
                         </p>
                         <h5>Favourite website</h5>
-                        <a href="http://www.zinzin.com/welcome-naming-a-company-or-product/?gclid=CL2our6ikMgCFQMJaQodqLgCDg">Corporate Naming Practices</a>
+                        <a target="_blank" href="http://www.zinzin.com/welcome-naming-a-company-or-product/?gclid=CL2our6ikMgCFQMJaQodqLgCDg">Corporate Naming Practices</a>
                     </div>
                 </div>
             </div>
