--- a/index.html
+++ b/index.html
@@ -9,30 +9,25 @@
 	
 
 	<div class="container">
-		<img src="Images/directory logo.gif" alt="Directory logo"/>
-		<nav class="vertical">
-
-			<div class="thumbnail">
-
+		<div class="header">
+			<img class="logo" src="Images/directory logo.gif" alt="Directory logo"/>
+		</div>
+		<div class="directory">
+			<div class="profile">
 				<img class="img-circle" src="Images/Johnny_Football.jpg"/>
-	
-				<img class="img-circle" src="http://brickbust.thelegomovie.com/img/welcome/cityLego.png"/>
-
-				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
-
-    			<ul>
-      				<li>
-        				<a href="employees/johnny_football.html">Johnny Football</a>
-	  				</li>
-	   				<li>
-        				<a href="employees/davey-chase.html">Davey Chase</a>
-	  				</li>
-	   				<li>
-        				<a href="employees/cathy-wicket.html">Cathy Wicket</a>
-	  				</li>
-				</ul>
+				<a href="employees/johnny_football.html">Johnny Football</a>
 			</div>
-		</nav>
+			<div class="profile">
+				<img class="img-circle" src="http://brickbust.thelegomovie.com/img/welcome/cityLego.png"/>
+				<a href="employees/davey-chase.html">Davey Chase</a>
+				
+			</div>
+			<div class="profile">
+				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
+				<a href="employees/cathy-wicket.html">Cathy Wicket</a>
+			</div>
+		</div>
+			
 	</div>
 
 </body>
