--- a/employees/davey-chase.html
+++ b/employees/davey-chase.html
@@ -36,7 +36,7 @@
                             Professional wrestler, Particle Physicist, Company Enforcer. I live on whey powder.
                         </p>
                         <h5>Favourite website</h5>
-                        <a href="http://ca.bodybuilding.com/store/campaign/campaign.jsp?cId=canada-top-bodybuilding-supplements&mcid=GGL_CA_Bodybuilding_Brand-Bodybuilding_Brand_Semi_Branded_Bodybuilding&bbkwid=12616671&gclid=CKve8bKhkMgCFVY0aQod_XAFig">Bodybuilding Supplies</a>
+                        <a target="_blank" href="http://ca.bodybuilding.com/store/campaign/campaign.jsp?cId=canada-top-bodybuilding-supplements&mcid=GGL_CA_Bodybuilding_Brand-Bodybuilding_Brand_Semi_Branded_Bodybuilding&bbkwid=12616671&gclid=CKve8bKhkMgCFVY0aQod_XAFig">Bodybuilding Supplies</a>
                     </div>
                 </div>
             </div>
