--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -23,20 +23,20 @@
                     <h4 class="media-heading">Senior Manager</h4>
                     <div>
                         <!-- Employee Bio -->
-                        <h5>Age</h5>
+                        <h5>Age:</h5>
                         <p>
                             32
                         </p>
-                        <h5>Email</h5>
+                        <h5>Email:</h5>
                         <address>
                             <a href="mailto:jfootball@branstation.io">Johnny Football</a>
                         </address>
-                        <h5>Bio</h5>
+                        <h5>Bio:</h5>
                         <p>
                             Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
                         </p>
-                        <h5>Favourite website</h5>
-                        <a href="http://www.wikihow.com/Be-a-Good-Boss">Being A Boss</a>
+                        <h5>Favourite website:</h5>
+                        <a target="_blank" href="http://www.wikihow.com/Be-a-Good-Boss">Being A Boss</a>
                     </div>
                 </div>
             </div>
