--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
 				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
 				<a href="employees/cathy-wicket.html">Cathy Wicket</a>
 			</div>
+			<h3>Departments</h3>
+			<section>
+			<uo>
+				<li>a href="department/sales.html"/>Sales</li>
+				<li>a href="department/security.html"/>Security</li>
+				<li>a href="department/collections.html"/>Collections</li>
+				<li>a href="department/publicrelations.html/>Public Relations</li>
+				</uo>
+				</section>
 		</div>
 			
-	</div>
+	
 
 </body>
 </html>
