Added new members

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
 				<a href="employees/cathy-wicket.html">Cathy Wicket</a>
 			</div>
+
 			<h3>Departments</h3>
 			<section>
 			<uo>
@@ -35,6 +36,20 @@
 				<li>a href="department/publicrelations.html/>Public Relations</li>
 				</uo>
 				</section>
+
+			<div class="profile">
+				<img class="img-circle" src="Images/johnson-wong.jpg"/>
+				<a href="employees/johnson-wong.html">Johnson Wong</a>
+			</div>
+			<div class="profile">
+				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
+				<a href="employees/mustafa-ahmed.html">Mustafa Ahmed</a>
+			</div>
+			<div class="profile">
+				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
+				<a href="employees/mike-wex.html">Mike Wex</a>
+			</div>
+
 		</div>
 			
 	
