Added department pages

--- a/department/publicrelations.html
+++ b/department/publicrelations.html
@@ -10,7 +10,7 @@
 
 	<div class="container">
 		<div class="header">
-			<img class="logo" src="Images/directory logo.gif" alt="Directory logo"/>
+			<h1>PUBLIC RELATIONS</h1>
 		</div>
 		<div class="departments">
 			<h3>Departments</h3>
