Updated public relations

--- a/department/publicrelations.html
+++ b/department/publicrelations.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="CSS/index.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/index.css">
 	<title>Company Directory</title>
 </head>
 <body>
@@ -15,41 +15,22 @@
 		<div class="departments">
 			<h3>Departments</h3>
 			<uo>
-				<li><a href="department/sales.html"/>Sales</a></li>
-				<li><a href="department/security.html"/>Security</a></li>
-				<li><a href="department/collections.html"/>Collections</a></li>
-				<li><a href="department/publicrelations.html"/>Public Relations</a></li>
+				<li><a href="sales.html"/>Sales</a></li>
+				<li><a href="security.html"/>Security</a></li>
+				<li><a href="collections.html"/>Collections</a></li>
+				<li><a href="publicrelations.html"/>Public Relations</a></li>
 			</uo>
 		</div>
 		<div class="directory">
-			<div class="profile">
-				<img class="img-circle" src="Images/Johnny_Football.jpg"/>
-				<a href="employees/johnny_football.html">Johnny Football</a>
-			</div>
-			<div class="profile">
-				<img class="img-circle" src="http://brickbust.thelegomovie.com/img/welcome/cityLego.png"/>
-				<a href="employees/davey-chase.html">Davey Chase</a>
-				
-			</div>
-			<div class="profile">
-				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
-				<a href="employees/cathy-wicket.html">Cathy Wicket</a>
-			</div>
+		
 
 			
 
 			<div class="profile">
-				<img class="img-circle" src="Images/johnson-wong.jpg"/>
-				<a href="employees/johnson-wong.html">Johnson Wong</a>
+				<img class="img-circle" src="../Images/johnson-wong.jpg"/>
+				<a href="../employees/johnson-wong.html">Johnson Wong</a>
 			</div>
-			<div class="profile">
-				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
-				<a href="employees/mustafa-ahmed.html">Mustafa Ahmed</a>
-			</div>
-			<div class="profile">
-				<img class="img-circle" src="Images/mike-wex.jpg"/>
-				<a href="employees/mike-wex.html">Mike Wex</a>
-			</div>
+			
 
 		</div>
 			
