--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<a href="employees/johnson-wong.html">Johnson Wong</a>
 			</div>
 			<div class="profile">
-				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
+				<img class="img-circle" src="Images/mustafa-ahmed.jpg"/>
 				<a href="employees/mustafa-ahmed.html">Mustafa Ahmed</a>
 			</div>
 			<div class="profile">
