Updated sales and security

--- a/department/sales.html
+++ b/department/sales.html
@@ -15,7 +15,8 @@
 		<div class="departments">
 			<h3>Departments</h3>
 			<uo>
-				<li>Sales</li>
+				<li><a href="../index.html">Home</a></li>
+				<li class="current">Sales</li>
 				<li><a href="security.html"/>Security</a></li>
 				<li><a href="collections.html"/>Collections</a></li>
 				<li><a href="publicrelations.html"/>Public Relations</a></li>
