Updated collections and public relations

--- a/department/publicrelations.html
+++ b/department/publicrelations.html
@@ -15,10 +15,11 @@
 		<div class="departments">
 			<h3>Departments</h3>
 			<uo>
+				<li><a href="../index.html">Home</a></li>
 				<li><a href="sales.html"/>Sales</a></li>
 				<li><a href="security.html"/>Security</a></li>
 				<li><a href="collections.html"/>Collections</a></li>
-				<li><a href="publicrelations.html"/>Public Relations</a></li>
+				<li>Public Relations</li>
 			</uo>
 		</div>
 		<div class="directory">
