Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit fd637907ab6d3ba5eae4be2b69fdbb1f1baf33db, reversing
changes made to 02f4c22fe40b93352bfb1e621a3d894f75b954c0.

--- a/employees/davey-chase.html
+++ b/employees/davey-chase.html
@@ -23,22 +23,20 @@
                     <h4 class="media-heading">Senior Manager's Helper</h4>
                     <div>
                         <!-- Employee Bio -->
-                        <h5>Age:</h5>
+                        <h5>Age</h5>
                         <p>
                             24
                         </p>
-                        <h5>Email:</h5>
+                        <h5>Email</h5>
                         <address>
                             <a href="mailto:d.chase@branstation.io">Davey Chase</a>
                         </address>
-                        <h5>Bio:</h5>
+                        <h5>Bio</h5>
                         <p>
                             Professional wrestler, Particle Physicist, Company Enforcer. I live on whey powder.
                         </p>
-
                         <h5>Favourite website</h5>
                         <a target="_blank" href="http://ca.bodybuilding.com/store/campaign/campaign.jsp?cId=canada-top-bodybuilding-supplements&mcid=GGL_CA_Bodybuilding_Brand-Bodybuilding_Brand_Semi_Branded_Bodybuilding&bbkwid=12616671&gclid=CKve8bKhkMgCFVY0aQod_XAFig">Bodybuilding Supplies</a>
-
                     </div>
                 </div>
             </div>
