--- a/employees/johnson-wong.html
+++ b/employees/johnson-wong.html
@@ -12,31 +12,31 @@
             <!-- Back to index.html -->
             <a href="../index.html" class="btn btn-info">back</a>
             <!-- Employee Name -->
-            <h2>Johnny Football</h2>
+            <h2>Johnson Wong</h2>
 
             <div class="media">
                 <div class="media-left">
-                    <img class="img-circle" src="../Images/Johnny_Football.jpg"/>
+                    <img class="img-circle" src="../Images/johnson-wong.jpg"/>
                 </div>
                 <div class="media-body">
                     <!-- Employee Position -->
-                    <h4 class="media-heading">Senior Manager</h4>
+                    <h4 class="media-heading">Public Relaations Director</h4>
                     <div>
                         <!-- Employee Bio -->
                         <h5>Age:</h5>
                         <p>
-                            32
+                            36
                         </p>
                         <h5>Email:</h5>
                         <address>
-                            <a href="mailto:jfootball@branstation.io">Johnny Football</a>
+                            <a href="mailto:johnsonwongcs@gmail.com">Johnson Wong</a>
                         </address>
                         <h5>Bio:</h5>
                         <p>
-                            Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
+                            People pleaser, awesome buddy, tech junkie
                         </p>
                         <h5>Favourite website:</h5>
-                        <a target="_blank" href="http://www.wikihow.com/Be-a-Good-Boss">Being A Boss</a>
+                        <a target="_blank" href="http://www.theverge.com">Tech stuff</a>
                     </div>
                 </div>
             </div>
