--- a/employees/mike-wex.html
+++ b/employees/mike-wex.html
@@ -12,15 +12,15 @@
             <!-- Back to index.html -->
             <a href="../index.html" class="btn btn-info">back</a>
             <!-- Employee Name -->
-            <h2>Johnny Football</h2>
+            <h2>Mike Wex</h2>
 
             <div class="media">
                 <div class="media-left">
-                    <img class="img-circle" src="../Images/Johnny_Football.jpg"/>
+                    <img class="img-circle" src="../Images/mike-wex.jpg"/>
                 </div>
                 <div class="media-body">
                     <!-- Employee Position -->
-                    <h4 class="media-heading">Senior Manager</h4>
+                    <h4 class="media-heading">Collection Specialist</h4>
                     <div>
                         <!-- Employee Bio -->
                         <h5>Age:</h5>
@@ -29,14 +29,14 @@
                         </p>
                         <h5>Email:</h5>
                         <address>
-                            <a href="mailto:jfootball@branstation.io">Johnny Football</a>
+                            <a href="mailto:mwex@branstation.io">Mike Wex</a>
                         </address>
                         <h5>Bio:</h5>
                         <p>
-                            Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
+                           I collect.
                         </p>
                         <h5>Favourite website:</h5>
-                        <a target="_blank" href="http://www.wikihow.com/Be-a-Good-Boss">Being A Boss</a>
+                        <a target="_blank" href="http://www.michaelwex.com">Michael Wex</a>
                     </div>
                 </div>
             </div>
