--- a/department/collections.html
+++ b/department/collections.html
@@ -25,7 +25,7 @@
 		<div class="directory">
 			
 				<img class="img-circle" src="../Images/mike-wex.jpg"/>
-				<a href="employees/mike-wex.html">Mike Wex</a>
+				<a href="../employees/mike-wex.html">Mike Wex</a>
 			</div>
 
 		</div>
