Fixed link bugs

--- a/department/sales.html
+++ b/department/sales.html
@@ -26,7 +26,7 @@
 	
 			<div class="profile">
 				<img class="img-circle" src="http://images5.fanpop.com/image/photos/28700000/best-sailor-moon-pictures-sailor-moon-28772771-595-600.jpg"/>
-				<a href="employees/cathy-wicket.html">Cathy Wicket</a>
+				<a href="../employees/cathy-wicket.html">Cathy Wicket</a>
 			</div>
 
 
