--- a/department/security.html
+++ b/department/security.html
@@ -26,7 +26,7 @@
 		
 			<div class="profile">
 				<img class="img-circle" src="../Images/mustafa-ahmed.jpg"/>
-				<a href="employees/mustafa-ahmed.html">Mustafa Ahmed</a>
+				<a href="../employees/mustafa-ahmed.html">Mustafa Ahmed</a>
 			</div>
 		
 
