--- a/employees/mustafa-ahmed.html
+++ b/employees/mustafa-ahmed.html
@@ -12,31 +12,31 @@
             <!-- Back to index.html -->
             <a href="../index.html" class="btn btn-info">back</a>
             <!-- Employee Name -->
-            <h2>Johnny Football</h2>
+            <h2>Mustafa Ahmed</h2>
 
             <div class="media">
                 <div class="media-left">
-                    <img class="img-circle" src="../Images/Johnny_Football.jpg"/>
+                    <img class="img-circle" src="../images/mustafa-ahmed.jpg"/>
                 </div>
                 <div class="media-body">
                     <!-- Employee Position -->
-                    <h4 class="media-heading">Senior Manager</h4>
+                    <h4 class="media-heading">Head of Security</h4>
                     <div>
                         <!-- Employee Bio -->
                         <h5>Age:</h5>
                         <p>
-                            32
+                            22
                         </p>
                         <h5>Email:</h5>
                         <address>
-                            <a href="mailto:jfootball@branstation.io">Johnny Football</a>
+                            <a href="mailto:m00sr3@gmail.om">Moose</a>
                         </address>
                         <h5>Bio:</h5>
                         <p>
-                            Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
+                            No, Mulder, thats definitely not an alien.
                         </p>
                         <h5>Favourite website:</h5>
-                        <a target="_blank" href="http://www.wikihow.com/Be-a-Good-Boss">Being A Boss</a>
+                        <a target="_blank" href="https://www.wikipedia.org/">Wikipedia</a>
                     </div>
                 </div>
             </div>
